--- a/influence.html
+++ b/influence.html
@@ -81,23 +81,35 @@
       padding-right:15px;
     }
 
+    
+    #logo{
+      margin-left: auto;
+      margin-right: auto; 
+      width:200px;
+      height:200px;
+    }
+
+    .influencer{
+      background-color: #182430;
+    }
+
+    .twtr-color--white-neutral {
+    color: #fff;
+    }
+
    
 
   </style>
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar influencer navbar-inverse style="height: 50px; background-color: #182430; border-color: #182430;>
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    
+    <span class="u01-dtc-react__twitter-logo">
+            <svg class="u01-dtc-react__twitter-logo-icon twtr-icon" height="30" id="space" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 0h24v24H0z" opacity="0"></path>
+              <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z" fill="#1D9BF0"></path></svg></span>
+              <span class="u01-dtc-react__root-page-title twtr-type--bold-24 twtr-color--white-neutral" style="position: relative; bottom: 5px; left: 5px;font-size: 30px;">Influencer</span>
   </div>
 </nav>
 
